fix missing padding in single-view

--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ h6 a:visited {
     margin : 10px 0 20px;
     font-size : 16px;
 }
-#content header.entry-header a {
+#content header.entry-header h1 {
     padding : 0 10px;
 }
 
